# george

./: CMakeLists.txt  pyproject.toml
src/george/: gp.py  kernel_interface.cpp  kernels.py  modeling.py
src/george/include/george/: hodlr.h  kernels.h  parser.h
src/george/solvers/: _hodlr.cpp  basic.py  hodlr.py  user_block_funcs_kernel.py
