[project]
name = "george"
description = "Blazingly fast Gaussian Processes for regression."
readme = "README.rst"
authors = [{ name = "Daniel Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
requires-python = ">=3.8"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/dfm/george" }
dependencies = ["numpy", "scipy"]
dynamic = ["version"]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/george/george_version.py"]
wheel.install-dir = "george"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"



# [tool.scikit-build.cmake]
# build-type = "debug"
# args = [
#   "-DCMAKE_VERBOSE_MAKEFILE=ON",
#   "-DCMAKE_CXX_FLAGS_DEBUG=-O0 -g",
#   "-DCMAKE_CXX_FLAGS_RELEASE=",
#   "-DCMAKE_CXX_FLAGS_RELWITHDEBINFO=",
# ]



[tool.setuptools_scm]
write_to = "src/george/george_version.py"
